--- a/config/content.htm
+++ b/config/content.htm
@@ -460,7 +460,7 @@ class Figure:
 
 
 class Tetris:
-    level = 1
+    level = 2
     score = 0
     state = "start"
     field = []
@@ -648,3 +648,9 @@ browser.timer.set_interval(do_game, fps)
 <p><iframe height="768px" src="https://s40723207.github.io/wcm2022/downloads/Tetris%E5%8A%A0%E5%85%A5%E8%A8%88%E5%88%86%E7%B3%BB%E7%B5%B1.pdf" width="1000"></iframe></p><h1>final</h1>
 <p><a href="/downloads/finalproject.pdf">finalproject.pdf</a></p>
 <p><iframe height="768px" src="https://s40723207.github.io/wcm2022/downloads/finalproject.pdf" width="1000px"></iframe></p>
+<h1>w17</h1>
+<p><iframe allowfullscreen="allowfullscreen" height="314" src="//www.youtube.com/embed/QZ5VdHypOss" width="560"></iframe></p>
+<p>自評成績:70</p>
+<p>心得:</p>
+<p>　　一開始的<span>SSH</span>與<span>IP</span>的問題對於修過課的來講，已經是輕而易舉，然後後面學到的東西卻不然，<span>wink3</span>對於要在網站上教學十分好用，<span>nginx</span>在設定也十分有用，以往在傳東西給別人，要嘛拿<span>USB</span>慢慢拉，要嗎丟雲端，這個<span>nginx</span>十分好用；由於是大四才來修，也能看得出隨身系統的更新，變得比以前更好用。</p>
+<p></p>
