--- a/content/final.html
+++ b/content/final.html
@@ -128,7 +128,7 @@ img.add_border {
                             <li><a href="./../blog/index.html">blog</a></li>
                         </ul>
                       </li>
-                     <li><a href='About.html'>About</a><li class='has-children'><a href='Progress.html'>Progress</a><ul class='dropdown'><li><a href='Week1~Week8.html'>Week1~Week8</a><li><a href='Week9~Week12.html'>Week9~Week12</a><li><a href='Week13.html'>Week13</a><li><a href='Week14.html'>Week14</a></li></ul><li><a href='midterm.html'>midterm</a><li class='has-children'><a href='tetris.html'>tetris</a><ul class='dropdown'><li><a href='report.html'>report</a></li></ul><li><a href='final.html'>final</a></li>
+                     <li><a href='About.html'>About</a><li class='has-children'><a href='Progress.html'>Progress</a><ul class='dropdown'><li><a href='Week1~Week8.html'>Week1~Week8</a><li><a href='Week9~Week12.html'>Week9~Week12</a><li><a href='Week13.html'>Week13</a><li><a href='Week14.html'>Week14</a></li></ul><li><a href='midterm.html'>midterm</a><li class='has-children'><a href='tetris.html'>tetris</a><ul class='dropdown'><li><a href='report.html'>report</a></li></ul><li><a href='final.html'>final</a><li><a href='w17.html'>w17</a></li>
                       </ul>
                 </nav>
               </div>
@@ -139,9 +139,10 @@ img.add_border {
           </div>
           
         </header>
-    <div id="tipue_search_content">report << <a href='report.html'>Previous</a> <br /><h1>final</h1>
+    <div id="tipue_search_content">report << <a href='report.html'>Previous</a> <a href='w17.html'>Next</a> >> w17<br /><h1>final</h1>
 <p><a href="./../downloads/finalproject.pdf">finalproject.pdf</a></p>
-<p><iframe height="768px" src="https://s40723207.github.io/wcm2022/downloads/finalproject.pdf" width="1000px"></iframe></p><br />report << <a href='report.html'>Previous</a> </div>
+<p><iframe height="768px" src="https://s40723207.github.io/wcm2022/downloads/finalproject.pdf" width="1000px"></iframe></p>
+<br />report << <a href='report.html'>Previous</a> <a href='w17.html'>Next</a> >> w17</div>
         
     <!-- footer -->
       <div class="container">
